# autoeval

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  run-autoeval.py
autoeval/: __init__.py
autoeval/configsbank/: aav.yml  bind.yml  conservation.yml  gb1.yml  meltome.yml  sav.yml  scl.yml  secondary_structure.yml
autoeval/managers/: __init__.py  configfiles.py  data.py
autoeval/utilities/: FASTA.py  FLIP.py  cli.py  executer.py  settings.py
legacy/: all_flip_to_fasta.sh  esm2_embedder.py  esm2_embedder_large_model.py  flip_csv_to_fasta.py
