[tool.poetry]
name = "autoeval"
version = "0.1.0"
description = "AutoEval for FLIP Benchmark"
authors = [
    "Christian Dallago <christian.dallago@tum.de>",
    "Joaquin Gomez Sanchez <joaquin.gomez@tum.de>"
]
license = "AFL v3.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: AFL License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]

[tool.poetry.scripts]
autoeval = 'autoeval.utilities.cli:main'

[tool.poetry.urls]
issues = "https://github.com/J-SNACKKB/autoeval/issues"
repository = "https://github.com/J-SNACKKB/autoeval"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"

pandas = "1.2.4"
setuptools = "58.5.1" # Confilc with tensorboard in torch "AttributeError: module 'setuptools._distutils' has no attribute 'version'"·

biotrainer = { path = "./autoeval/biotrainer", develop = false, extras = ["bio-embeddings"] }

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
