[tool.poetry]
name = "autoeval"
version = "0.1.0"
description = "AutoEval for FLIP Benchmark"
authors = [
    "Joaquin Gomez Sanchez <joaquin.gomez@tum.de>",
    "Christian Dallago <christian.dallago@tum.de>"
]
license = "AFL v3.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: AFL License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]

[tool.poetry.scripts]
autoeval = 'autoeval.utilities.cli:main'

[tool.poetry.urls]
issues = "https://github.com/J-SNACKKB/autoeval/issues"
repository = "https://github.com/J-SNACKKB/autoeval"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
biopython = ">=1.83,<2.0"

biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", branch = "develop", optional=true}

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[tool.poetry.extras]
biotrainer = ["biotrainer"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
